[optin/reporting/client] task: fix timestamp overlap issue

--- a/optin/reporting/client/src/styles/globals.scss
+++ b/optin/reporting/client/src/styles/globals.scss
@@ -42,6 +42,11 @@
   height: 1.2rem;
 }
 
+.timestamp {
+  font: 0.8rem;
+  white-space: nowrap;
+}
+
 .download-button {
   float: right;
   margin: 0 auto !important;
